[gd_scene load_steps=21 format=3 uid="uid://hydbmjnr3ac7"]

[ext_resource type="Script" path="res://Scripts/Level/level.gd" id="1_6mw7i"]
[ext_resource type="TileSet" uid="uid://dl1v2g37rekyr" path="res://tiles.tres" id="2_siqbi"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="3_6vqxk"]
[ext_resource type="Texture2D" uid="uid://do4dqs14geydu" path="res://1-Bit Platformer Pack/Tilemap/monochrome_tilemap_transparent.png" id="4_0as7l"]
[ext_resource type="PackedScene" uid="uid://cb27whjxdt6me" path="res://Scenes/Prefabs/LevelObjects/door.tscn" id="4_gcck0"]
[ext_resource type="PackedScene" uid="uid://cy564bg3nrhuj" path="res://Scenes/Prefabs/LevelObjects/coin.tscn" id="5_af18l"]
[ext_resource type="Script" path="res://Scripts/UI/minimap.gd" id="5_jyqfb"]
[ext_resource type="PackedScene" uid="uid://dhliwxuxmyhib" path="res://Scenes/Prefabs/LevelObjects/dig_site.tscn" id="6_7b1wl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7kcpe"]
radius = 6.49351

[sub_resource type="CircleShape2D" id="CircleShape2D_dn5aj"]
radius = 24.3311

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ekpk"]
size = Vector2(20, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2vqcd"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6fvyi"]
size = Vector2(13, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_abw1c"]
size = Vector2(10, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_uo6rx"]
atlas = ExtResource("4_0as7l")
region = Rect2(0, 255, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndstk"]
atlas = ExtResource("4_0as7l")
region = Rect2(68, 255, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2eur"]
atlas = ExtResource("4_0as7l")
region = Rect2(17, 255, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f847x"]
atlas = ExtResource("4_0as7l")
region = Rect2(34, 255, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s14ru"]
atlas = ExtResource("4_0as7l")
region = Rect2(51, 255, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_g10vl"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uo6rx")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndstk")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2eur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f847x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s14ru")
}],
"loop": true,
"name": &"run",
"speed": 7.0
}]

[node name="Level" type="Node2D"]
script = ExtResource("1_6mw7i")
levelNumber = 1

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_siqbi")
format = 2
layer_0/tile_data = PackedInt32Array(1507328, 1114113, 6, 0, 1048577, 6, 65536, 1048577, 6, 131072, 1048577, 6, 196608, 1048577, 6, 262144, 1048577, 6, 327680, 1048577, 6, 393216, 1048577, 6, 458752, 1048577, 6, 524288, 1048577, 6, 589824, 1048577, 6, 655360, 1114113, 6, 720896, 1114113, 6, 786432, 1114113, 6, 851968, 1114113, 6, 917504, 1114113, 6, 983040, 1114113, 6, 1048576, 1114113, 6, 1114112, 1114113, 6, 1179648, 1114113, 6, 1245184, 1114113, 6, 1310720, 1114113, 6, 1376256, 1114113, 6, 1441792, 1114113, 6, 1572864, 1048577, 6, 1638400, 1048577, 6, 1703936, 1048577, 6, 1769472, 1048577, 6, 1835008, 1048577, 6, 1900544, 1048577, 6, 1966080, 1048577, 6, 2031616, 1048577, 6, 1, 1048577, 6, 2, 1048577, 6, 3, 1048577, 6, 4, 1048577, 6, 5, 1048577, 6, 6, 1048577, 6, 7, 1048577, 6, 8, 1048577, 6, 9, 1048577, 6, 10, 1048577, 6, 11, 1048577, 6, 12, 1048577, 6, 13, 1048577, 6, 14, 1048577, 6, 15, 1048577, 6, 16, 1048577, 6, 17, 1048577, 6, 18, 1048577, 6, 19, 1048577, 6, 20, 1048577, 6, 21, 1048577, 6, 22, 1048577, 6, 23, 1048577, 6, 24, 1048577, 6, 25, 1048577, 6, 26, 1048577, 6, 27, 1048577, 6, 28, 1048577, 6, 29, 1048577, 6, 30, 1048577, 6, 31, 1048577, 6, 2097152, 1048577, 6, 2162688, 1048577, 6, 2162689, 1048577, 6, 2162690, 1048577, 6, 2162691, 1048577, 6, 2162692, 1048577, 6, 2162693, 1048577, 6, 2162694, 1048577, 6, 2162695, 1048577, 6, 2162696, 1048577, 6, 2162697, 1048577, 6, 2162698, 1048577, 6, 2162699, 1048577, 6, 2162700, 1048577, 6, 2162701, 1048577, 6, 2162702, 1048577, 6, 2162703, 1048577, 6, 2162704, 1048577, 6, 2162705, 1048577, 6, 2162706, 1048577, 6, 2162707, 1048577, 6, 2162708, 1048577, 6, 2162709, 1048577, 6, 2162710, 1048577, 6, 2162711, 1048577, 6, 2162712, 1048577, 6, 2162713, 1048577, 6, 2162714, 1048577, 6, 2162715, 1048577, 6, 2162716, 1048577, 6, 2162717, 1048577, 6, 2162718, 1048577, 6, 2162719, 1048577, 6, 32, 1048577, 6, 2162720, 1048577, 6, 33, 1048577, 6, 65569, 1048577, 6, 131105, 1048577, 6, 196641, 1048577, 6, 262177, 1048577, 6, 327713, 1048577, 6, 393249, 1048577, 6, 458785, 1048577, 6, 524321, 1048577, 6, 589857, 1048577, 6, 655393, 983041, 6, 720929, 983041, 6, 786465, 983041, 6, 852001, 983041, 6, 917537, 983041, 6, 983073, 983041, 6, 1048609, 983041, 6, 1114145, 983041, 6, 1179681, 983041, 6, 1245217, 983041, 6, 1310753, 983041, 6, 1376289, 983041, 6, 1441825, 983041, 6, 1507361, 983041, 6, 1572897, 1048577, 6, 1638433, 1048577, 6, 1703969, 1048577, 6, 1769505, 1048577, 6, 1835041, 1048577, 6, 1900577, 1048577, 6, 1966113, 1048577, 6, 2031649, 1048577, 6, 2097185, 1048577, 6, 2162721, 1048577, 6, 65537, 1048577, 6, 131073, 1048577, 6, 196609, 1048577, 6, 262145, 1048577, 6, 327681, 1048577, 6, 393217, 1048577, 6, 458753, 1048577, 6, 524289, 1048577, 6, 589825, 1048577, 7, 65538, 1048577, 6, 131074, 1048577, 6, 196610, 1048577, 6, 262146, 1048577, 6, 327682, 1048577, 6, 393218, 1048577, 6, 458754, 1048577, 6, 524290, 1048577, 6, 589826, 1048577, 7, 65539, 1048577, 6, 131075, 1048577, 6, 196611, 1048577, 6, 262147, 1048577, 6, 327683, 1048577, 6, 393219, 1048577, 6, 458755, 1048577, 6, 524291, 1048577, 6, 589827, 1048577, 7, 65540, 1048577, 6, 131076, 1048577, 6, 196612, 1048577, 6, 262148, 1048577, 6, 327684, 1048577, 6, 393220, 1048577, 6, 458756, 1048577, 6, 524292, 1048577, 6, 589828, 1048577, 7, 65541, 1048577, 6, 131077, 1048577, 6, 196613, 1048577, 6, 262149, 1048577, 6, 327685, 1048577, 6, 393221, 1048577, 6, 458757, 1048577, 6, 524293, 1048577, 6, 589829, 1048577, 7, 65542, 1048577, 6, 131078, 1048577, 6, 196614, 1048577, 6, 262150, 1048577, 6, 327686, 1048577, 6, 393222, 1048577, 6, 458758, 1048577, 6, 524294, 1048577, 6, 589830, 1048577, 7, 65543, 1048577, 6, 131079, 1048577, 6, 196615, 1048577, 6, 262151, 1048577, 6, 327687, 1048577, 6, 393223, 1048577, 6, 458759, 1048577, 6, 524295, 1048577, 6, 589831, 1048577, 7, 65544, 1048577, 6, 131080, 1048577, 6, 196616, 1048577, 6, 262152, 1048577, 6, 327688, 1048577, 6, 393224, 1048577, 6, 458760, 1048577, 6, 524296, 1048577, 6, 589832, 1048577, 7, 65545, 1048577, 6, 131081, 1048577, 6, 196617, 1048577, 6, 262153, 1048577, 6, 327689, 1048577, 6, 393225, 1048577, 6, 458761, 1048577, 6, 524297, 1048577, 6, 589833, 1048577, 7, 65546, 1048577, 6, 131082, 1048577, 6, 196618, 1048577, 6, 262154, 1048577, 6, 327690, 1048577, 6, 393226, 1048577, 6, 458762, 1048577, 6, 524298, 1048577, 6, 589834, 1048577, 7, 65547, 1048577, 6, 131083, 1048577, 6, 196619, 1048577, 6, 262155, 1048577, 6, 327691, 1048577, 6, 393227, 1048577, 6, 458763, 1048577, 6, 524299, 1048577, 6, 589835, 1048577, 7, 65548, 1048577, 6, 131084, 1048577, 6, 196620, 1048577, 6, 262156, 1048577, 6, 327692, 1048577, 6, 393228, 1048577, 6, 458764, 1048577, 6, 524300, 1048577, 6, 589836, 1048577, 7, 65549, 1048577, 6, 131085, 1048577, 6, 196621, 1048577, 6, 262157, 1048577, 6, 327693, 1048577, 6, 393229, 1048577, 6, 458765, 1048577, 6, 524301, 1048577, 6, 589837, 1048577, 7, 65550, 1048577, 6, 131086, 1048577, 6, 196622, 1048577, 6, 262158, 1048577, 6, 327694, 1048577, 6, 393230, 1048577, 6, 458766, 1048577, 6, 524302, 1048577, 6, 589838, 1048577, 7, 65551, 1048577, 6, 131087, 1048577, 6, 196623, 1048577, 6, 262159, 1048577, 6, 327695, 1048577, 6, 393231, 1048577, 6, 458767, 1048577, 6, 524303, 1048577, 6, 589839, 1048577, 7, 65552, 1048577, 6, 131088, 1048577, 6, 196624, 1048577, 6, 262160, 1048577, 6, 327696, 1048577, 6, 393232, 1048577, 6, 458768, 1048577, 6, 524304, 1048577, 6, 589840, 1048577, 7, 65553, 1048577, 6, 131089, 1048577, 6, 196625, 1048577, 6, 262161, 1048577, 6, 327697, 1048577, 6, 393233, 1048577, 6, 458769, 1048577, 6, 524305, 1048577, 6, 589841, 1048577, 7, 65554, 1048577, 6, 131090, 1048577, 6, 196626, 1048577, 6, 262162, 1048577, 6, 327698, 1048577, 6, 393234, 1048577, 6, 458770, 1048577, 6, 524306, 1048577, 6, 589842, 1048577, 7, 65555, 1048577, 6, 131091, 1048577, 6, 196627, 1048577, 6, 262163, 1048577, 6, 327699, 1048577, 6, 393235, 1048577, 6, 458771, 1048577, 6, 524307, 1048577, 6, 589843, 1048577, 7, 65556, 1048577, 6, 131092, 1048577, 6, 196628, 1048577, 6, 262164, 1048577, 6, 327700, 1048577, 6, 393236, 1048577, 6, 458772, 1048577, 6, 524308, 1048577, 6, 589844, 1048577, 7, 65557, 1048577, 6, 131093, 1048577, 6, 196629, 1048577, 6, 262165, 1048577, 6, 327701, 1048577, 6, 393237, 1048577, 6, 458773, 1048577, 6, 524309, 1048577, 6, 589845, 1048577, 7, 65558, 1048577, 6, 131094, 1048577, 6, 196630, 1048577, 6, 262166, 1048577, 6, 327702, 1048577, 6, 393238, 1048577, 6, 458774, 1048577, 6, 524310, 1048577, 6, 589846, 1048577, 7, 65559, 1048577, 6, 131095, 1048577, 6, 196631, 1048577, 6, 262167, 1048577, 6, 327703, 1048577, 6, 393239, 1048577, 6, 458775, 1048577, 6, 524311, 1048577, 6, 589847, 1048577, 7, 65560, 1048577, 6, 131096, 1048577, 6, 196632, 1048577, 6, 262168, 1048577, 6, 327704, 1048577, 6, 393240, 1048577, 6, 458776, 1048577, 6, 524312, 1048577, 6, 589848, 1048577, 7, 65561, 1048577, 6, 131097, 1048577, 6, 196633, 1048577, 6, 262169, 1048577, 6, 327705, 1048577, 6, 393241, 1048577, 6, 458777, 1048577, 6, 524313, 1048577, 6, 589849, 1048577, 7, 65562, 1048577, 6, 131098, 1048577, 6, 196634, 1048577, 6, 262170, 1048577, 6, 327706, 1048577, 6, 393242, 1048577, 6, 458778, 1048577, 6, 524314, 1048577, 6, 589850, 1048577, 7, 65563, 1048577, 6, 131099, 1048577, 6, 196635, 1048577, 6, 262171, 1048577, 6, 327707, 1048577, 6, 393243, 1048577, 6, 458779, 1048577, 6, 524315, 1048577, 6, 589851, 1048577, 7, 65564, 1048577, 6, 131100, 1048577, 6, 196636, 1048577, 6, 262172, 1048577, 6, 327708, 1048577, 6, 393244, 1048577, 6, 458780, 1048577, 6, 524316, 1048577, 6, 589852, 1048577, 7, 65565, 1048577, 6, 131101, 1048577, 6, 196637, 1048577, 6, 262173, 1048577, 6, 327709, 1048577, 6, 393245, 1048577, 6, 458781, 1048577, 6, 524317, 1048577, 6, 589853, 1048577, 7, 65566, 1048577, 6, 131102, 1048577, 6, 196638, 1048577, 6, 262174, 1048577, 6, 327710, 1048577, 6, 393246, 1048577, 6, 458782, 1048577, 6, 524318, 1048577, 6, 589854, 1048577, 7, 65567, 1048577, 6, 131103, 1048577, 6, 196639, 1048577, 6, 262175, 1048577, 6, 327711, 1048577, 6, 393247, 1048577, 6, 458783, 1048577, 6, 524319, 1048577, 6, 589855, 1048577, 7, 65568, 1048577, 6, 131104, 1048577, 6, 196640, 1048577, 6, 262176, 1048577, 6, 327712, 1048577, 6, 393248, 1048577, 6, 458784, 1048577, 6, 524320, 1048577, 6, 589856, 1048577, 7, 1572865, 1048577, 5, 1638401, 1048577, 6, 1703937, 1048577, 6, 1769473, 1048577, 6, 1835009, 1048577, 6, 1900545, 1048577, 6, 1966081, 1048577, 6, 2031617, 1048577, 6, 2097153, 1048577, 6, 1572866, 1048577, 5, 1638402, 1048577, 6, 1703938, 1048577, 6, 1769474, 1048577, 6, 1835010, 1048577, 6, 1900546, 1048577, 6, 1966082, 1048577, 6, 2031618, 1048577, 6, 2097154, 1048577, 6, 1572867, 1048577, 5, 1638403, 1048577, 6, 1703939, 1048577, 6, 1769475, 1048577, 6, 1835011, 1048577, 6, 1900547, 1048577, 6, 1966083, 1048577, 6, 2031619, 1048577, 6, 2097155, 1048577, 6, 1572868, 1048577, 5, 1638404, 1048577, 6, 1703940, 1048577, 6, 1769476, 1048577, 6, 1835012, 1048577, 6, 1900548, 1048577, 6, 1966084, 1048577, 6, 2031620, 1048577, 6, 2097156, 1048577, 6, 1572869, 1048577, 5, 1638405, 1048577, 6, 1703941, 1048577, 6, 1769477, 1048577, 6, 1835013, 1048577, 6, 1900549, 1048577, 6, 1966085, 1048577, 6, 2031621, 1048577, 6, 2097157, 1048577, 6, 1572870, 1048577, 5, 1638406, 1048577, 6, 1703942, 1048577, 6, 1769478, 1048577, 6, 1835014, 1048577, 6, 1900550, 1048577, 6, 1966086, 1048577, 6, 2031622, 1048577, 6, 2097158, 1048577, 6, 1572871, 1048577, 5, 1638407, 1048577, 6, 1703943, 1048577, 6, 1769479, 1048577, 6, 1835015, 1048577, 6, 1900551, 1048577, 6, 1966087, 1048577, 6, 2031623, 1048577, 6, 2097159, 1048577, 6, 1572872, 1048577, 5, 1638408, 1048577, 6, 1703944, 1048577, 6, 1769480, 1048577, 6, 1835016, 1048577, 6, 1900552, 1048577, 6, 1966088, 1048577, 6, 2031624, 1048577, 6, 2097160, 1048577, 6, 1572873, 1048577, 5, 1638409, 1048577, 6, 1703945, 1048577, 6, 1769481, 1048577, 6, 1835017, 1048577, 6, 1900553, 1048577, 6, 1966089, 1048577, 6, 2031625, 1048577, 6, 2097161, 1048577, 6, 1572874, 1048577, 5, 1638410, 1048577, 6, 1703946, 1048577, 6, 1769482, 1048577, 6, 1835018, 1048577, 6, 1900554, 1048577, 6, 1966090, 1048577, 6, 2031626, 1048577, 6, 2097162, 1048577, 6, 1572875, 1048577, 5, 1638411, 1048577, 6, 1703947, 1048577, 6, 1769483, 1048577, 6, 1835019, 1048577, 6, 1900555, 1048577, 6, 1966091, 1048577, 6, 2031627, 1048577, 6, 2097163, 1048577, 6, 1572876, 1048577, 5, 1638412, 1048577, 6, 1703948, 1048577, 6, 1769484, 1048577, 6, 1835020, 1048577, 6, 1900556, 1048577, 6, 1966092, 1048577, 6, 2031628, 1048577, 6, 2097164, 1048577, 6, 1572877, 1048577, 5, 1638413, 1048577, 6, 1703949, 1048577, 6, 1769485, 1048577, 6, 1835021, 1048577, 6, 1900557, 1048577, 6, 1966093, 1048577, 6, 2031629, 1048577, 6, 2097165, 1048577, 6, 1572878, 1048577, 5, 1638414, 1048577, 6, 1703950, 1048577, 6, 1769486, 1048577, 6, 1835022, 1048577, 6, 1900558, 1048577, 6, 1966094, 1048577, 6, 2031630, 1048577, 6, 2097166, 1048577, 6, 1572879, 1048577, 5, 1638415, 1048577, 6, 1703951, 1048577, 6, 1769487, 1048577, 6, 1835023, 1048577, 6, 1900559, 1048577, 6, 1966095, 1048577, 6, 2031631, 1048577, 6, 2097167, 1048577, 6, 1572880, 1048577, 5, 1638416, 1048577, 6, 1703952, 1048577, 6, 1769488, 1048577, 6, 1835024, 1048577, 6, 1900560, 1048577, 6, 1966096, 1048577, 6, 2031632, 1048577, 6, 2097168, 1048577, 6, 1572881, 1048577, 5, 1638417, 1048577, 6, 1703953, 1048577, 6, 1769489, 1048577, 6, 1835025, 1048577, 6, 1900561, 1048577, 6, 1966097, 1048577, 6, 2031633, 1048577, 6, 2097169, 1048577, 6, 1572882, 1048577, 5, 1638418, 1048577, 6, 1703954, 1048577, 6, 1769490, 1048577, 6, 1835026, 1048577, 6, 1900562, 1048577, 6, 1966098, 1048577, 6, 2031634, 1048577, 6, 2097170, 1048577, 6, 1572883, 1048577, 5, 1638419, 1048577, 6, 1703955, 1048577, 6, 1769491, 1048577, 6, 1835027, 1048577, 6, 1900563, 1048577, 6, 1966099, 1048577, 6, 2031635, 1048577, 6, 2097171, 1048577, 6, 1572884, 1048577, 5, 1638420, 1048577, 6, 1703956, 1048577, 6, 1769492, 1048577, 6, 1835028, 1048577, 6, 1900564, 1048577, 6, 1966100, 1048577, 6, 2031636, 1048577, 6, 2097172, 1048577, 6, 1572885, 1048577, 5, 1638421, 1048577, 6, 1703957, 1048577, 6, 1769493, 1048577, 6, 1835029, 1048577, 6, 1900565, 1048577, 6, 1966101, 1048577, 6, 2031637, 1048577, 6, 2097173, 1048577, 6, 1572886, 1048577, 5, 1638422, 1048577, 6, 1703958, 1048577, 6, 1769494, 1048577, 6, 1835030, 1048577, 6, 1900566, 1048577, 6, 1966102, 1048577, 6, 2031638, 1048577, 6, 2097174, 1048577, 6, 1572887, 1048577, 5, 1638423, 1048577, 6, 1703959, 1048577, 6, 1769495, 1048577, 6, 1835031, 1048577, 6, 1900567, 1048577, 6, 1966103, 1048577, 6, 2031639, 1048577, 6, 2097175, 1048577, 6, 1572888, 1048577, 5, 1638424, 1048577, 6, 1703960, 1048577, 6, 1769496, 1048577, 6, 1835032, 1048577, 6, 1900568, 1048577, 6, 1966104, 1048577, 6, 2031640, 1048577, 6, 2097176, 1048577, 6, 1572889, 1048577, 5, 1638425, 1048577, 6, 1703961, 1048577, 6, 1769497, 1048577, 6, 1835033, 1048577, 6, 1900569, 1048577, 6, 1966105, 1048577, 6, 2031641, 1048577, 6, 2097177, 1048577, 6, 1572890, 1048577, 5, 1638426, 1048577, 6, 1703962, 1048577, 6, 1769498, 1048577, 6, 1835034, 1048577, 6, 1900570, 1048577, 6, 1966106, 1048577, 6, 2031642, 1048577, 6, 2097178, 1048577, 6, 1572891, 1048577, 5, 1638427, 1048577, 6, 1703963, 1048577, 6, 1769499, 1048577, 6, 1835035, 1048577, 6, 1900571, 1048577, 6, 1966107, 1048577, 6, 2031643, 1048577, 6, 2097179, 1048577, 6, 1572892, 1048577, 5, 1638428, 1048577, 6, 1703964, 1048577, 6, 1769500, 1048577, 6, 1835036, 1048577, 6, 1900572, 1048577, 6, 1966108, 1048577, 6, 2031644, 1048577, 6, 2097180, 1048577, 6, 1572893, 1048577, 5, 1638429, 1048577, 6, 1703965, 1048577, 6, 1769501, 1048577, 6, 1835037, 1048577, 6, 1900573, 1048577, 6, 1966109, 1048577, 6, 2031645, 1048577, 6, 2097181, 1048577, 6, 1572894, 1048577, 5, 1638430, 1048577, 6, 1703966, 1048577, 6, 1769502, 1048577, 6, 1835038, 1048577, 6, 1900574, 1048577, 6, 1966110, 1048577, 6, 2031646, 1048577, 6, 2097182, 1048577, 6, 1572895, 1048577, 5, 1638431, 1048577, 6, 1703967, 1048577, 6, 1769503, 1048577, 6, 1835039, 1048577, 6, 1900575, 1048577, 6, 1966111, 1048577, 6, 2031647, 1048577, 6, 2097183, 1048577, 6, 1572896, 1048577, 5, 1638432, 1048577, 6, 1703968, 1048577, 6, 1769504, 1048577, 6, 1835040, 1048577, 6, 1900576, 1048577, 6, 1966112, 1048577, 6, 2031648, 1048577, 6, 2097184, 1048577, 6)

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(88, 376)
collision_layer = 2
collision_mask = 325
script = ExtResource("3_6vqxk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, 4)
scale = Vector2(0.77, 0.77)
shape = SubResource("CircleShape2D_7kcpe")

[node name="PlayerHitbox" type="Area2D" parent="Player"]
position = Vector2(0, 4)
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/PlayerHitbox"]
scale = Vector2(0.77, 0.77)
shape = SubResource("CircleShape2D_7kcpe")

[node name="InteractableHitbox" type="Area2D" parent="Player"]
collision_layer = 2
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/InteractableHitbox"]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_dn5aj")

[node name="MeleeHitbox" type="Area2D" parent="Player"]
collision_layer = 2
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/MeleeHitbox"]
position = Vector2(15, 3)
shape = SubResource("RectangleShape2D_2ekpk")
disabled = true

[node name="MeleeHitboxTimer" type="Timer" parent="Player/MeleeHitbox"]
process_callback = 0
wait_time = 0.2

[node name="WateringCanHitbox" type="Area2D" parent="Player"]
collision_layer = 2
collision_mask = 36

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/WateringCanHitbox"]
position = Vector2(10, 3)
shape = SubResource("RectangleShape2D_2vqcd")
disabled = true

[node name="WateringCanTimer" type="Timer" parent="Player/WateringCanHitbox"]
process_callback = 0
wait_time = 0.3

[node name="DigHitbox" type="Area2D" parent="Player"]
collision_layer = 2
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/DigHitbox"]
position = Vector2(11.5, 4)
shape = SubResource("RectangleShape2D_6fvyi")
disabled = true

[node name="DigHitboxTimer" type="Timer" parent="Player/DigHitbox"]
process_callback = 0
wait_time = 0.7

[node name="GroundPoundHitbox" type="Area2D" parent="Player"]
collision_layer = 2
collision_mask = 4

[node name="GroundPoundCollisionShape2D" type="CollisionShape2D" parent="Player/GroundPoundHitbox"]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_abw1c")
disabled = true

[node name="PlayerSprite" type="AnimatedSprite2D" parent="Player"]
sprite_frames = SubResource("SpriteFrames_g10vl")
animation = &"idle"
offset = Vector2(0, 1.5)

[node name="PlayerCamera" type="Camera2D" parent="Player"]
visible = false
zoom = Vector2(3, 3)
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 10.0
drag_vertical_enabled = true
drag_left_margin = 0.1
drag_top_margin = 0.1
drag_right_margin = 0.1
drag_bottom_margin = 0.1

[node name="CameraTransform" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../PlayerCamera")

[node name="HUD" type="Control" parent="Player"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="Player/HUD"]

[node name="HealthLabel" type="Label" parent="Player/HUD/CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -624.0
offset_right = 113.0
offset_bottom = -601.0
grow_vertical = 0
text = "Health Remaining:"

[node name="CollectablesLabel" type="Label" parent="Player/HUD/CanvasLayer"]
offset_right = 124.0
offset_bottom = 23.0
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Gems Collected:"

[node name="LevelLabel" type="Label" parent="Player/HUD/CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 113.0
grow_vertical = 0
text = "Level Number:"

[node name="Minimap" type="ColorRect" parent="Player/HUD/CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -216.0
offset_top = -216.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 8
color = Color(0.137255, 0.101961, 0.156863, 1)
script = ExtResource("5_jyqfb")

[node name="SubViewportContainer" type="SubViewportContainer" parent="Player/HUD/CanvasLayer/Minimap"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="Player/HUD/CanvasLayer/Minimap/SubViewportContainer"]
disable_3d = true
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(200, 200)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="Player/HUD/CanvasLayer/Minimap/SubViewportContainer/SubViewport"]

[node name="CollectionHitbox" type="Area2D" parent="Player"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/CollectionHitbox"]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_dn5aj")

[node name="Doors" type="Node" parent="."]

[node name="Door" parent="Doors" instance=ExtResource("4_gcck0")]
position = Vector2(504, 376)
connectingScene = "res://Scenes/Levels/Build Levels/C3-C5.tscn"
is_spawning_right = false

[node name="Coins" type="Node" parent="."]

[node name="Coin" parent="Coins" instance=ExtResource("5_af18l")]
position = Vector2(152, 360)

[node name="Coin2" parent="Coins" instance=ExtResource("5_af18l")]
position = Vector2(176, 360)

[node name="Coin3" parent="Coins" instance=ExtResource("5_af18l")]
position = Vector2(200, 360)

[node name="Coin4" parent="Coins" instance=ExtResource("5_af18l")]
position = Vector2(224, 360)

[node name="DigSite" parent="." instance=ExtResource("6_7b1wl")]
position = Vector2(120, 384)

[connection signal="area_entered" from="Player/PlayerHitbox" to="Player" method="_on_player_hitbox_area_entered"]
[connection signal="area_entered" from="Player/InteractableHitbox" to="Player" method="_on_interactable_hitbox_area_entered"]
[connection signal="area_exited" from="Player/InteractableHitbox" to="Player" method="_on_interactable_hitbox_area_exited"]
[connection signal="timeout" from="Player/MeleeHitbox/MeleeHitboxTimer" to="Player" method="_on_melee_hitbox_timer_timeout"]
[connection signal="timeout" from="Player/WateringCanHitbox/WateringCanTimer" to="Player" method="_on_watering_can_timer_timeout"]
[connection signal="timeout" from="Player/DigHitbox/DigHitboxTimer" to="Player" method="_on_dig_hitbox_timer_timeout"]
[connection signal="area_entered" from="Player/GroundPoundHitbox" to="Player" method="_on_ground_pound_hitbox_area_entered"]
[connection signal="area_entered" from="Player/CollectionHitbox" to="Player" method="_on_collection_hitbox_area_entered"]
[connection signal="area_exited" from="Player/CollectionHitbox" to="Player" method="_on_collection_hitbox_area_exited"]
